# gestor_batimetrico

./: .gitignore  README.md  bathymetry.py  pyproject.toml  requirements.txt  setup.py
Bathymetry/: __init__.py  __main__.py  bathymetry.py  utils.py
Example/: example.py
Test/: test.py
src/bathymetry/: __init__.py  __main__.py  core.py  logging_utils.py  plotting.py  utils.py
tests/: test_bathymetry.py
